--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,22 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.2'
+    }
+}
+
 plugins {
     id 'java'
 }
 
 group 'com.galvanize'
 version '1.0-SNAPSHOT'
+
+
+
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 sourceCompatibility = 1.8
 
@@ -12,7 +25,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'org.apiguardian:apiguardian-api:1.0.0',
+                'org.junit.jupiter:junit-jupiter-engine:5.0.1'
 }
 
 jar {
